packages/rspack/tests/__snapshots__/StatsTestCases.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for filename 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.xxxx.js",
      "size": 1424,
      "type": "asset",
    },
    {
      "chunkNames": [],
      "chunks": [
        "dynamic_js",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "dynamic_js.xxxx.js",
      "size": 218,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.xxxx.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": false,
      "files": [
        "dynamic_js.xxxx.js",
      ],
      "id": "dynamic_js",
      "initial": false,
      "modules": [
        {
          "chunks": [
            "dynamic_js",
          ],
          "id": "471",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
          "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerId": "2",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "2",
              "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./dynamic.js",
          "size": 32,
          "type": "module",
        },
      ],
      "names": [],
      "parents": [
        "main",
      ],
      "siblings": [],
      "size": 32,
      "type": "chunk",
    },
    {
      "children": [
        "dynamic_js",
      ],
      "entry": true,
      "files": [
        "main.xxxx.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "chunks": [
            "main",
          ],
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "size": 38,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 38,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1424,
        },
      ],
      "assetsSize": 1424,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "110f63490c34b72c",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 38,
      "type": "module",
    },
    {
      "chunks": [
        "dynamic_js",
      ],
      "id": "471",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./dynamic.js",
      "size": 32,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1424,
        },
      ],
      "assetsSize": 1424,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/filename/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for filename 2`] = `
"Hash: 110f63490c34b72c
             Asset       Size      Chunks             Chunk Names
      main.xxxx.js   1.39 KiB        main  [emitted]  main
dynamic_js.xxxx.js  218 bytes  dynamic_js  [emitted]  
Entrypoint main = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js 32 bytes
 [471] ./dynamic.js 32 bytes {dynamic_js}
chunk {main} main.xxxx.js (main) 38 bytes [entry]
 [2] ./index.js 38 bytes {main}
[2] ./index.js 38 bytes {main}
[471] ./dynamic.js 32 bytes {dynamic_js}"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 9022,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "chunks": [
            "main",
          ],
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "size": 25,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9022,
        },
      ],
      "assetsSize": 9022,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "217ff74a39ec0965",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 25,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9022,
        },
      ],
      "assetsSize": 9022,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/hot+production/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"Hash: 217ff74a39ec0965
    Asset      Size  Chunks             Chunk Names
bundle.js  8.81 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 25 bytes [entry]
 [2] ./index.js 25 bytes {main}
[2] ./index.js 25 bytes {main}"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"
error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e1~runtime.js",
      ],
      "id": "e1~runtime",
      "initial": true,
      "names": [
        "e1~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e2~runtime.js",
      ],
      "id": "e2~runtime",
      "initial": true,
      "names": [
        "e2~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 286,
        },
        {
          "name": "e1~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1909,
      "chunks": [
        "e1",
        "e1~runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 286,
        },
        {
          "name": "e2~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1909,
      "chunks": [
        "e2",
        "e2~runtime",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 286,
        },
        {
          "name": "e1~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1909,
      "chunks": [
        "e1",
        "e1~runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 286,
        },
        {
          "name": "e2~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1909,
      "chunks": [
        "e2",
        "e2~runtime",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 2`] = `
"Entrypoint e1 = e1.js e1~runtime.js
Entrypoint e2 = e2.js e2~runtime.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e1~runtime} e1~runtime.js (e1~runtime) 0 bytes [initial]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {e2~runtime} e2~runtime.js (e2~runtime) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 280,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 280,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 280,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 280,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 2`] = `
"Entrypoint e1 = e1.js runtime~e1.js
Entrypoint e2 = e2.js runtime~e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) 0 bytes [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime.js",
      ],
      "id": "runtime",
      "initial": true,
      "names": [
        "runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 283,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 283,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 283,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 283,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 2`] = `
"Entrypoint e1 = e1.js runtime.js
Entrypoint e2 = e2.js runtime.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime} runtime.js (runtime) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 280,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 280,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 280,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 280,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1903,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 2`] = `
"Entrypoint e1 = e1.js runtime~e1.js
Entrypoint e2 = e2.js runtime~e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) 0 bytes [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 363,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "chunks": [
            "main",
          ],
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "size": 51,
          "type": "module",
        },
        {
          "chunks": [
            "main",
          ],
          "id": "193",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a",
          "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerId": "2",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "2",
              "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing)",
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 211,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 363,
        },
      ],
      "assetsSize": 363,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
    },
  ],
  "errorsCount": 1,
  "hash": "599e9041e2141245",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 51,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "193",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing)",
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 363,
        },
      ],
      "assetsSize": 363,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"Hash: 599e9041e2141245
PublicPath: auto
    Asset       Size  Chunks             Chunk Names
bundle.js  363 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 211 bytes [entry]
 [2] ./index.js 51 bytes {main}
 [193] <PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing) 160 bytes {main}
[2] ./index.js 51 bytes {main}
[193] <PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing) 160 bytes {main}

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 972,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "chunks": [
            "main",
          ],
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "size": 39,
          "type": "module",
        },
        {
          "chunks": [
            "main",
          ],
          "id": "481",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a",
          "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerId": "2",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "2",
              "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing)",
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 199,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 972,
        },
      ],
      "assetsSize": 972,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
    },
  ],
  "errorsCount": 1,
  "hash": "881dd818478cfa8f",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 39,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "481",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing)",
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 972,
        },
      ],
      "assetsSize": 972,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"Hash: 881dd818478cfa8f
    Asset       Size  Chunks             Chunk Names
bundle.js  972 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 199 bytes [entry]
 [2] ./index.js 39 bytes {main}
 [481] <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing) 160 bytes {main}
[2] ./index.js 39 bytes {main}
[481] <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing) 160 bytes {main}

Export should be relative path and start with "./", but got ../../index.js
"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 317,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "chunks": [
            "main",
          ],
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/simple/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "size": 26,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 317,
        },
      ],
      "assetsSize": 317,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "77107cc3f22df218",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 317,
        },
      ],
      "assetsSize": 317,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/simple/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"Hash: 77107cc3f22df218
    Asset       Size  Chunks             Chunk Names
bundle.js  317 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 26 bytes [entry]
 [2] ./index.js 26 bytes {main}
[2] ./index.js 26 bytes {main}"
`;
